# mcpadapt

./: 404.html  README.md  index.html  objects.inv  pyproject.toml
docs/: quickstart.md
docs/auth/: api-key.md  custom-handlers.md  oauth.md  overview.md  quickstart.md
examples/: canva_oauth_example.py  llamaindex_pubmed.py  oauth_with_credentials_example.py
guide/crewai/: index.html
guide/google-genai/: index.html
guide/langchain/: index.html
guide/smolagents/: index.html
quickstart/: index.html
ref/core/: index.html
ref/crewai_adapter/: index.html
ref/google_genai_adapter/: index.html
ref/langchain_adapter/: index.html
ref/smolagents_adapter/: index.html
search/: search_index.json
src/: echo.py
src/mcpadapt/: core.py  crewai_adapter.py  llamaindex_adapter.py  smolagents_adapter.py
src/mcpadapt/auth/: __init__.py  authenticate.py  exceptions.py  handlers.py  models.py  oauth.py  providers.py
src/mcpadapt/utils/: modeling.py
tests/: _server_utils.py  test_core.py  test_core_fault_tolerance.py  test_crewai_adapter.py  test_langchain_adapter.py  test_modeling.py  test_smolagents_adapter.py  test_smolagents_adapter_structured_output.py
tests/auth/: test_handlers.py  test_providers.py
